Fix default messageListItem border left color for dark mode

--- a/dev/Styles/User/MessageList.less
+++ b/dev/Styles/User/MessageList.less
@@ -195,7 +195,7 @@ html:not(rl-mobile) {
 	cursor: pointer;
 	border: 0;
 	border-bottom: 1px solid rgba(153, 153, 153, 0.2);
-	border-left: 6px solid #eee;
+	border-left: 6px solid transparent;
 	display: flex;
 	font-size: 13px;
 	line-height: 2;
